--- a/Bilinguals/Content/Site.css
+++ b/Bilinguals/Content/Site.css
@@ -42,6 +42,10 @@ textarea {
     background-color: #cfe7ff; /*xanh nen nhat*/
 }
 
+.bg-custom4 {
+    background-color: #f2f2f2; /*cau hoi thoai*/
+}
+
 .btn-custom1 {
     color: #fff;
     background-color: #00356a;
@@ -260,4 +264,9 @@ textarea {
 
 .shadow-custom1 {
     box-shadow: 0 0.125rem 0.25rem rgb(18 48 77) !important
+}
+
+.px-custom1 {
+    padding-right: 6rem !important;
+    padding-left: 6rem !important;
 }
