--- a/Bilinguals/Views/Home/Index.cshtml
+++ b/Bilinguals/Views/Home/Index.cshtml
@@ -69,8 +69,8 @@
                                 </td>
                                 <td class="col-3 d-flex flex-row-reverse">
                                     <div class="btn-group dropstart btnsave">
-                                        <div class="gn @(item.GroupName.IsEmpty() ? null : "my-auto rounded-start bg-custom3 py-1" )"> <span class=" px-@(item.GroupName.IsEmpty() ? "0" : "2" ) ">@item.GroupName</span>  </div>
-                                        <button @(User.Identity.GetUserId() == null ? "hidden" : "") type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-custom2" : "custom2") btn-sm my-4 rounded-pill dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                                        <div class="gn @(item.GroupName.IsEmpty() ? null : "my-auto rounded-start bg-custom3" )"> <span class=" px-@(item.GroupName.IsEmpty() ? "0" : "2" ) ">@item.GroupName</span>  </div>
+                                        <button @(User.Identity.GetUserId() == null ? "hidden" : "") type="button" data-sentenceid="@item.Id" data-usersentenceid="@item.UserSentenceId" class="btn btn-select btn-@(!item.UserSentenceId.HasValue ? "outline-custom2" : "custom2") btn-sm my-4 rounded-pill1 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
                                             <span class="bi bi-@(!item.UserSentenceId.HasValue ? "info-lg" : "check-lg")"></span>
                                         </button>
                                         <ul class="dropdown-menu savedropdown" aria-labelledby="dropdownMenuSave">
@@ -152,7 +152,7 @@
         <script type="text/javascript">
 
             $(function () {
-                var searchTearms = $('#searchText').val().split(' ');
+                var searchTearms = $('#searchText').val().toLowerCase().split(' ');
                 if (searchTearms.length === 0)
                     return;
 
@@ -161,7 +161,8 @@
                     var enTerms = $(tbcell).data('entext').split(' ');
                     var viTerms = $(tbcell).data('vitext').split(' ');
                     var viHtml = viTerms.reduce(function (acc, item) {
-                        if (searchTearms.indexOf(item) > -1) {
+                        var i = item.toLowerCase(); // bug
+                        if (searchTearms.indexOf(i) > -1) {
                             acc += `<em class="bold">${item}</em> `;
                         } else {
                             acc += item + ' ';
@@ -169,7 +170,8 @@
                         return acc;
                     }, '');
                     var enHtml = enTerms.reduce(function (acc, item) {
-                        if (searchTearms.indexOf(item) > -1) {
+                        var i = item.toLowerCase().replace(/[^\w\s]/gi, '');
+                        if (searchTearms.indexOf(i) > -1) {
                             acc += `<em class="bold">${item}</em> `;
                         } else {
                             acc += item + ' ';
