--- a/Bilinguals/Views/Dialogs/Details.cshtml
+++ b/Bilinguals/Views/Dialogs/Details.cshtml
@@ -53,7 +53,7 @@
                 i = i + 1;
                 <tr class="row px-5">
                     <td class="col-3"></td>
-                    <td class="col-9 d-flex align-items-end flex-column bg-custom4 mb-3 rounded-pill px-4 py-2 shadow-sm">
+                    <td class="col-9 d-flex align-items-end flex-column bg-white mb-3 rounded-pill px-4 py-2 shadow-sm">
                         <span class="entext">
                             <span class="btn-group btn-sm" role="group" aria-label="Basic example">
                                 <button data-text="@item.EnText" type="button" class="speak btnnopadding btn-outline-custom1"><i class="bi bi-volume-up-fill"></i></button>
@@ -85,8 +85,26 @@
     </table>
 </div>
 
-<div class="row mx-5">
-    <div class="px-5">Phần comment và góp ý sửa lỗi</div>
+<div class="row mx-5 ">
+    <div class="px-5 w-100">
+        <div class="row bg-white rounded-pill1 shadow-sm">
+            <div class="p-4">
+                <h4>Comment & Feedback</h4>
+
+                @* Cac comment khac o day *@
+
+
+                <label class="form-label">Write your comment</label>
+                <form id="commentForm" method="post" class="d-flex">
+                    <input type="hidden" name="DialogId" value="@Model.Id" />
+                    <input type="hidden" name="UserId" />
+                    <input type="hidden" name="TimeStamp" />
+                    <textarea class="form-control flex-fill me-3" type="text" name="Text" style=" max-width: 850px;"></textarea>
+                    <button type="submit" class="btn btn-custom1 mt-4 flex-fill">Comment</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </div>
 
 
