--- a/Bilinguals/Areas/Admin/Views/UserManager/Edit.cshtml
+++ b/Bilinguals/Areas/Admin/Views/UserManager/Edit.cshtml
@@ -72,7 +72,7 @@
                 <div class="container">
                     <div class="row">
                         @{
-                            List<MyBilinguals.App.Areas.Admin.Models.SelectRoleData> roles = ViewBag.Roles;
+                            List<Bilinguals.Areas.Admin.Models.SelectRoleData> roles = ViewBag.Roles;
                             foreach (var role in roles)
                             {
                                 <div class="form-check form-switch col">
