--- a/Bilinguals/Areas/Admin/Views/Dashboard/Index.cshtml
+++ b/Bilinguals/Areas/Admin/Views/Dashboard/Index.cshtml
@@ -4,12 +4,12 @@
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
-<div class="row bg-white text-center">
+<div class="row bg-custom3 rounded-pill2 text-center">
     <h4 class="page-title pt-4 pb-2">Statistics</h4>
     <br />
     <div class="row w-75 mx-auto">
         <div class="col-lg-6 col-xl-6">
-            <div class="card shadow">
+            <div class="card shadow rounded-pill2">
                 <div class="card-body">
                     <div class="row align-items-center">
                         <div class="col-6 text-center">
@@ -20,7 +20,7 @@
                             </p>
                         </div>
                         <div class="col-6">
-                            <i style="font-size: 80px" class="bi bi-chat-right-quote link-success"></i>
+                            <i style="font-size: 80px; color: #092139;" class="bi bi-chat-right-quote"></i>
                         </div>
                     </div> <!-- end row-->
                 </div> <!-- end card-body -->
@@ -28,7 +28,7 @@
         </div> <!-- end col -->
 
         <div class="col-lg-6 col-xl-6">
-            <div class="card shadow">
+            <div class="card shadow rounded-pill2">
                 <div class="card-body">
                     <div class="row align-items-center">
                         <div class="col-6">
@@ -39,7 +39,7 @@
                             </p>
                         </div>
                         <div class="col-6">
-                            <i style="font-size: 80px" class="bi bi-text-right link-success"></i>
+                            <i style="font-size: 80px; color: #092139;" class="bi bi-text-right"></i>
                         </div>
                     </div> <!-- end row-->
                 </div> <!-- end card-body -->
@@ -49,7 +49,7 @@
     </div>
     <div class="row w-75 mx-auto my-4">
         <div class="col-lg-6 col-xl-6 mx-auto">
-            <div class="card shadow">
+            <div class="card shadow rounded-pill2">
                 <div class="card-body">
                     <div class="row align-items-center">
                         <div class="col-6">
@@ -60,7 +60,7 @@
                             </p>
                         </div>
                         <div class="col-6">
-                            <i style="font-size: 80px" class="bi bi-text-right link-success"></i>
+                            <i style="font-size: 80px; color: #092139;" class="bi bi-text-right"></i>
                         </div>
                     </div> <!-- end row-->
                 </div> <!-- end card-body -->
