--- a/Bilinguals/Views/Shared/_LoginPartial.cshtml
+++ b/Bilinguals/Views/Shared/_LoginPartial.cshtml
@@ -34,7 +34,7 @@
                 <li><a href="~/manage" class="dropdown-item" type="button"><i class="bi bi-person-lines-fill me-2"></i>Profile</a></li>
                 @if (User.IsInRole("Administrator"))
                 {
-                    <li><button class="dropdown-item" type="button"><i class="bi bi-emoji-sunglasses me-2"></i> Administrator</button></li>
+                    <li><a class="dropdown-item" type="button" href="~/admin/dashboard"><i class="bi bi-emoji-sunglasses me-2"></i> Administrator</a></li>
                 }
                 <li><a class="dropdown-item" href="javascript:document.getElementById('logoutForm').submit()"><i class="bi bi-box-arrow-left me-2"></i>Log out</a></li>
             </ul>
