--- a/Bilinguals/Views/Dialogs/Details.cshtml
+++ b/Bilinguals/Views/Dialogs/Details.cshtml
@@ -11,10 +11,18 @@
 
 
 <h2 class="text-center pt-3" style="font-family: 'Nunito Sans', sans-serif; font-weight: bold; color: #092139;"> @Html.DisplayFor(model => model.Name) </h2>
-<h6 class="text-center pb-4" style="opacity: 0.5; font-style: italic !important;">Last updated on @(Model.DateModified?.ToString("dd/MM/yyyy"))</h6>
+<h6 class="text-center" style="opacity: 0.5; font-style: italic !important;">Last updated on @(Model.DateModified?.ToString("dd/MM/yyyy"))</h6>
 <span hidden id="userId">@User.Identity.GetUserId()</span>
+<span class="d-flex justify-content-center">
+    @if (User.IsInRole("Administrator"))
+    {
+        <a href="~/Sentences/Create" class="btn btn-secondary btn-sm me-2" title="Create name dialog"><span class="bi bi-plus-lg me-1"></span> Add sentence</a>
+        <a href="~/Dialogs/Edit/@Model.Id" class="btn btn-warning btn-sm me-2" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a>
+        <a href="~/Dialogs/Delete/@Model.Id" class="btn btn-danger btn-sm" title="Delete dialog"><span class="bi bi-trash"></span></a>
+    }
+</span>
 
-<div class="row mx-5">
+<div class="row mx-5 mt-4">
     <table class="table table-borderless">
         @foreach (var item in Model.Sentences)  //if bug display: Object reference not set to an instance of an object => add virtual to navigation properties in Model
         {
@@ -46,14 +54,26 @@
                             </div>
                         </div>
                     </td>
-                    <td class="col-3"></td>
+                    <td class="col-3 d-flex flex-column">
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <span class="mt-3 mb-2"><a href="~/Sentences/Edit/@item.Id" class="btn btn-warning rounded-pill btn-sm" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a></span>
+                            <span class=""><a href="~/Sentences/Delete/@item.Id" class="btn btn-danger btn-sm rounded-pill" title="Delete dialog"><span class="bi bi-trash"></span></a></span>
+                        }
+                    </td>
                 </tr>
             }
             else
             {
                 i = i + 1;
                 <tr class="row px-5">
-                    <td class="col-3"></td>
+                    <td class="col-3 d-flex flex-column">
+                        @if (User.IsInRole("Administrator"))
+                        {
+                            <span class="mt-3 mb-2 d-flex flex-row-reverse"><a href="~/Sentences/Edit/@item.Id" class="btn btn-warning rounded-pill btn-sm" title="Edit name dialog"><span class="bi bi-pencil-square"></span></a></span>
+                            <span class="d-flex flex-row-reverse"><a href="~/Sentences/Delete/@item.Id" class="btn btn-danger btn-sm rounded-pill" title="Delete dialog"><span class="bi bi-trash"></span></a></span>
+                        }
+                    </td>
                     <td class="col-9 d-flex align-items-end flex-column bg-white mb-3 rounded-pill px-4 py-2 shadow-sm">
                         <span class="entext">
                             <span class="btn-group btn-sm" role="group" aria-label="Basic example">
